--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<h1> Please work </h1> 
+<head> 
+<title> Crying (fake ASOS) </title>
+</head> 
+
+<body> 
+<header> 
+<h1> ASOS SHOES </h1> 
+<nav>
+    <ul>
+      <li><a href="challemge 1.html">Home</a></li>
+      <li><a href="#">Clothes</a></li>
+      <li><a href="challemge 1 part 2.html">Shoes</a></li>
+      <li><a href="#">Beauty</a></li>
+    </ul>
+  </nav>
+ </header>
+
+ 
+<main> 
+<hr>
+<h1> 
+SALES 
+</h1>
+<hr>
+
+<div> 
+<h2> 
+TOPSHOP NOW PART OF ASOS
+</h2> 
+</div> 
+
+<div> 
+<h2> 
+SALES ENDING SOON 
+</h2> 
+</div>
+<p> I do not care for this </p>
+</main>
+
+<footer> 
+& copy ; 2021 - ASOS - All rights reserved
+</footer>
+</body>
